--- a/IdentityTest/Views/_ViewImports.cshtml
+++ b/IdentityTest/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using IdentityTest
-@using IdentityTest.Models
+﻿@using IdentityServer4.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
